fixed multi click bug and mobile viewport overflow

--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,7 @@ lottie-player {
 @media only screen and (max-width: 600px) {
     html, body {
         overflow: hidden;
+        max-height: 100vh;
       }
     body {
         padding: 0px;
